Implemented different approach for scal

--- a/conf/jobsub.conf
+++ b/conf/jobsub.conf
@@ -1,10 +1,13 @@
 [jobsub]
 qsub = qsub
-jobs_dir = /home/$user/temp/.jobs/$cdm
-scal_dir = /home/$user/temp/.scal
-jobs_byjid_dir = /home/$user/temp/.jobs/by-jid
-submissions_dir = /home/$user/temp/.submissions/$cdm
-last_index_file = /home/$user/temp/.jobs/$cdm/.last
+jobs_dir = $home/temp/.jobs/$cmy
+jobs_byjid_dir = $home/temp/.jobs/by-jid
+jobs_last_index_file = $home/temp/.jobs/$cmy/.last
+scal_dir = $home/temp/.scal
+scal_max_entries = 1000000
+scal_last_index_file = $home/temp/.scal/.last
+scal_index_table_prefix = scal.index
+submissions_dir = $home/temp/.submissions/$cmy
 parallel_environments = mpi cuda smp
 
 [pe mpi]
