--- a/conf/jobsub.conf
+++ b/conf/jobsub.conf
@@ -1,28 +1,23 @@
 [jobsub]
 qsub = qsub
-jobs_dir = $home/temp/.jobs/$cmy
-jobs_byjid_dir = $home/temp/.jobs/by-jid
-jobs_last_index_file = $home/temp/.jobs/$cmy/.last
-scal_dir = $home/temp/.scal
+jobs_dir = $home/.jobs/$cmy
+jobs_byjid_dir = $home/.jobs/by-jid
+jobs_last_index_file = $home/.jobs/$cmy/.last
+scal_dir = $home/.scal
 scal_max_entries = 1000000
-scal_last_index_file = $home/temp/.scal/.last
+scal_last_index_file = $home/.scal/.last
 scal_index_table_prefix = scal.index
-submissions_dir = $home/temp/.submissions/$cmy
-parallel_environments = mpi cuda smp
+submissions_dir = $home/.submissions/$cmy
+parallel_environments = mpi smp
 
 [pe mpi]
 max_slots = 64
 templates = mpi_default mpi_time mpi_valgrind
 default_template = mpi_default
 
-[pe gpu]
-max_slots = 1
-templates = gpu_default
-default_template = gpu_default
-
 [pe smp]
 max_slots = 64
-templates = smp_default
+templates = smp_default smp_time smp_valgrind
 default_template = smp_default
 
 [template mpi_default]
@@ -32,10 +27,14 @@ sub_template = /etc/sge-utils/templates/mpisub.job.template
 sub_template = /etc/sge-utils/templates/timempisub.job.template
 
 [template mpi_valgrind]
-sub_template = /etc/sge-utils/templates/valgrindsub.job.template
-
-[template gpu_default]
-sub_template = /etc/sge-utils/templates/gpusub.job.template
+sub_template = /etc/sge-utils/templates/valgrindmpisub.job.template
 
 [template smp_default]
 sub_template = /etc/sge-utils/templates/smpsub.job.template
+
+[template smp_time]
+sub_template = /etc/sge-utils/templates/timesmpsub.job.template
+
+[template smp_valgrind]
+sub_template = /etc/sge-utils/templates/valgrindsmpsub.job.template
+
